2014-03-20  6.8.8-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-9, SVN revision 15192.

2014-03-16  6.8.8-9 Glenn Randers-Pehrson <glennrp@image...>
  * Do not block threads in the png codec when PNG_SETJMP_SUPPORTED is not
    defined (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=23&t=25218).

2014-03-15  6.8.8-9 Dirk Lemstra <dirk@snakeware...>
  * Added tiff:ignore-tags to ignore specific tags.
  * Added orderedDither, selectiveBlur, separate, sepiaTone, sketch,
    smushImages, tint, uniqueColors and vignette to Magick++.

2014-03-11  6.8.8-9 Cristy  <quetzlzacatenango@image...>
  * The -define jpeg:extent option overrides the image quality (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25200). 

2014-03-09  6.8.8-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-8, SVN revision 15097.

2014-03-04  6.8.8-8 Glenn Randers-Pehrson <glennrp@image...>
  * Reset colorspace to Grayscale when reading a gray PNG image with
    gamma > 0.75 instead of when gamma==1.0 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25136).

2014-02-22  6.8.8-8 Dirk Lemstra <dirk@snakeware...>
  * The PSD reader creates a merged image if the image does not contain one.
  * Added option pdf:fit-page to scale a pdf to the specified size (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=25044).
  * The ResolutionInfo in the 8BIM profile will be updated when an image is
    written.
  * Fixed UTF8 issues and added support for reading files with long path names
    for the Windows distribution.

2014-02-21  6.8.8-8 Cristy  <quetzlzacatenango@image...>
  * Convert linear RGB to sRGB before writing the Targa image format.
  * Make sure we use the secure C library functions when compiling ImageMagick
    on Windows.
  * Tweak color reduction optimization to return a full color palette (reference